--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "uuid": "^9.0.0"
   },
   "type": "module",
   "scripts": {
